--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="modal-body">
     </div>
     <div class="modal-footer">
-      <b>created by jesse james johnson</b>
+      <b>Copyright © 2021 <a href="https://github.com/jjamesjohnson/RPSLS">jjamesjohnson</a></b>
     </div>
   </div>
 
