--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="modal-body">
     </div>
     <div class="modal-footer">
-      <b>Copyright © 2021 <a href="https://github.com/jjamesjohnson/RPSLS">jjamesjohnson</a></b>
+      This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 License</a>. <br> Find me on github: <a href="https://github.com/jjamesjohnson/RPSLS">jjamesjohnson</a>
     </div>
   </div>
 
